--- a/index.html
+++ b/index.html
@@ -8,11 +8,175 @@
 </head>
 <body>
  
+ <!-- header section start here  -->
+ <section class="header">
+    <header>
+        <div class="main-content">
+            <h1>The Greatest show on the  earth</h1>
+            <p>Contrary to popular belief, Lorem Ipsum is not simply 
+                random text. It has roots in a piece of classical Latin literature
+                from 45 BC, making it over <span>20</span> 00 years old.
+            </p>
+             <a href="#" class="button"> Watch Live <i class="fa-solid fa-arrow-right-long"></i> </a>
+        </div>
+        <div class="image">
+            <img src="assets/Banner Image.png" alt="">
+        </div>
+    </header>
+ </section>
+
+ <!--header section end  here   -->
+
+<!--  Card section start here  -->
+<section class="card">
+<div class="small-area">
+        <a href="mach.html">Upcoming Match</a>
+        <a href="#">All Group</a>
+        <a class="card-blog" href="#">Blog</a>
+</div>
+<div class="big-area">
+      <main class="main-card">
+         <div class="card-img">
+            <img src="assets/Blog Image.png" alt="">
+         </div>
+         <article class="blog-content">
+             <div class="blog-btn"><a href="#">Transfer</a></div>
+               <h6>Transfer Live: Chlesea in talks
+                over Kimpenbe transfer</h6>
+                <a href="#"><i class="fa-solid fa-clock"></i> <span>10h</span></a>
+                <a href="#"><i class="fa-solid fa-message"></i> <span>20</span> </a>
+         </article>
+        </main>
+      <main class="main-card">
+         <div class="card-img">
+            <img src="assets/Blog Image.png" alt="">
+         </div>
+         <article class="blog-content">
+            <div class="blog-btn"><a href="#">Transfer</a></div>
+               <h6>Transfer Live: Chlesea in talks
+                over Kimpenbe transfer</h6>
+                <a href="#"><i class="fa-solid fa-clock"></i> <span>10h</span></a>
+                <a href="#"><i class="fa-solid fa-message"></i> <span>20</span> </a>
+         </article>
+        </main>
+      <main class="main-card">
+         <div class="card-img">
+            <img src="assets/Blog Image.png" alt="">
+         </div>
+         <article class="blog-content">
+           <div class="blog-btn"><a href="#">Transfer</a></div>
+               <h6>Transfer Live: Chlesea in talks
+                over Kimpenbe transfer</h6>
+                <a href="#"><i class="fa-solid fa-clock"></i> <span>10h</span></a>
+                <a href="#"><i class="fa-solid fa-message"></i> <span>20</span> </a>
+         </article>
+        </main>
+      <main class="main-card">
+         <div class="card-img">
+            <img src="assets/Blog Image.png" alt="">
+         </div>
+         <article class="blog-content">
+           <div class="blog-btn"><a href="#">Transfer</a></div>
+               <h6>Transfer Live: Chlesea in talks
+                over Kimpenbe transfer</h6>
+                <a href="#"><i class="fa-solid fa-clock"></i> <span>10h</span></a>
+                <a href="#"><i class="fa-solid fa-message"></i> <span>20</span> </a>
+         </article>
+        </main>
+      <main class="main-card">
+         <div class="card-img">
+            <img src="assets/Blog Image.png" alt="">
+         </div>
+         <article class="blog-content">
+           <div class="blog-btn"><a href="#">Transfer</a></div>
+               <h6>Transfer Live: Chlesea in talks
+                over Kimpenbe transfer</h6>
+                <a href="#"><i class="fa-solid fa-clock"></i> <span>10h</span></a>
+                <a href="#"><i class="fa-solid fa-message"></i> <span>20</span> </a>
+         </article>
+        </main>
+      <main class="main-card">
+         <div class="card-img">
+            <img src="assets/Blog Image.png" alt="">
+         </div>
+         <article class="blog-content">
+           <div class="blog-btn"><a href="#">Transfer</a></div>
+               <h6>Transfer Live: Chlesea in talks
+                over Kimpenbe transfer</h6>
+                <a href="#"><i class="fa-solid fa-clock"></i> <span>10h</span></a>
+                <a href="#"><i class="fa-solid fa-message"></i> <span>20</span> </a>
+         </article>
+        </main>
+      <main class="main-card">
+         <div class="card-img">
+            <img src="assets/Blog Image.png" alt="">
+         </div>
+         <article class="blog-content">
+           <div class="blog-btn"><a href="#">Transfer</a></div>
+               <h6>Transfer Live: Chlesea in talks
+                over Kimpenbe transfer</h6>
+                <a href="#"><i class="fa-solid fa-clock"></i> <span>10h</span></a>
+                <a href="#"><i class="fa-solid fa-message"></i> <span>20</span> </a>
+         </article>
+        </main>
+      <main class="main-card">
+         <div class="card-img">
+            <img src="assets/Blog Image.png" alt="">
+         </div>
+         <article class="blog-content">
+           <div class="blog-btn"><a href="#">Transfer</a></div>
+               <h6>Transfer Live: Chlesea in talks
+                over Kimpenbe transfer</h6>
+                <a href="#"><i class="fa-solid fa-clock"></i> <span>10h</span></a>
+                <a href="#"><i class="fa-solid fa-message"></i> <span>20</span> </a>
+         </article>
+        </main>
+      <main class="main-card">
+         <div class="card-img">
+            <img src="assets/Blog Image.png" alt="">
+         </div>
+         <article class="blog-content">
+           <div class="blog-btn"><a href="#">Transfer</a></div>
+               <h6>Transfer Live: Chlesea in talks
+                over Kimpenbe transfer</h6>
+                <a href="#"><i class="fa-solid fa-clock"></i> <span>10h</span></a>
+                <a href="#"><i class="fa-solid fa-message"></i> <span>20</span> </a>
+         </article>
+        </main>
+        <div class="view-all-btn">
+         <a href="#">View all</a>
+    </div>
+</div>
+
+</section>
+<!--  Card section  End here  -->
+
+<!-- footer section start here -->
+<footer class="footer">
+<div class="footer-content">
+    <p>Goal</p>
+</div>
+ 
+ 
+ <div class="footer-nav">
+    <nav>
+        <a href="#">Contact Us</a>
+        <a href="#">Terms of Service</a>
+        <a href="#">Privacy Policy</a>
+        <a href="#">Privacy Settings</a>
+        <a href="#">Goal App </a>
+        <a href="#">Goal Live</a>
+    </nav>
+ </div>
+ <div class="social-icons">
+   <a href="https://www.facebook.comrobiul.islam.7121"><i class="fa-brands fa-facebook"></i></a>
+   <a href="https://robiul.islam.7121"><i class="fa-brands fa-instagram"></i></a>
+   <a href="mdrobiulhasan299@gmail.com"><i class="fa-brands fa-google"></i></a>
+ </div>
+</footer>
 
 
 
-
-<h1>hello</h1>
 
 
 
